--- a/components/goods-item/index.wxss
+++ b/components/goods-item/index.wxss
@@ -12,8 +12,29 @@
   transition: opacity .2s ease;
 }
 
+.cover-wrap {
+  position: relative;
+  font-size: 0;
+  border-radius: 32rpx 32rpx 0 0;
+  overflow: hidden;
+}
+.cover-wrap.show-tag {
+  border-radius: 32rpx;
+}
 .cover {
   width: 350rpx;
+}
+
+.type-label {
+  position: absolute;
+  top: 18rpx;
+  left: 18rpx;
+  padding: 0 12rpx;
+  height: 34rpx;
+  color: #fff;
+  font-size: 20rpx;
+  border-radius: 8rpx;
+  background: #f82f45;
 }
 
 .content {
@@ -26,13 +47,10 @@
   font-weight: bold;
 }
 .goods-tag {
-  display: inline-block;
-  margin-bottom: 1rpx;
-  margin-right: 4rpx;
-  padding: 0 12rpx;
+  padding: 1rpx 10rpx;
   height: 33rpx;
   color: #ef3741;
-  font-size: 20rpx;
+  font-size: 22rpx;
   line-height: 33rpx;
   font-weight: 500;
   text-align: center;
