feat: 更换主题色

--- a/pages/subpages/home/media/live/live-push/components/push-room/components/goods-shelves-popup/index.wxml
+++ b/pages/subpages/home/media/live/live-push/components/push-room/components/goods-shelves-popup/index.wxml
@@ -10,7 +10,7 @@
       </view>
       <view class="multiple-switch row">
         <view>多选：</view>
-        <switch bindchange="switchMultiple" color="#3979BE" />
+        <switch bindchange="switchMultiple" color="#169dfe" />
       </view>
     </view>
 
