--- a/pages/subpages/home/media/live/live-push/components/push-room/components/goods-shelves-popup/index.wxss
+++ b/pages/subpages/home/media/live/live-push/components/push-room/components/goods-shelves-popup/index.wxss
@@ -27,7 +27,7 @@
   height: 3px;
   content: "";
   border-radius: 1.5px;
-  background: #3979BE;
+  background: #169dfe;
 }
 
 .multiple-switch {
@@ -65,7 +65,7 @@
   color: #fff;
   font-size: 12px;
   line-height: 1;
-  background: #3979BE;
+  background: #169dfe;
   border-radius: 15px;
 }
 .all-pick-icon {
