--- a/pages/subpages/mine/merchant-center/subpages/catering-management/subpages/meal-ticket-order-detail/index.wxml
+++ b/pages/subpages/mine/merchant-center/subpages/catering-management/subpages/meal-ticket-order-detail/index.wxml
@@ -15,7 +15,7 @@
         <view class="content">{{orderInfo.consignee}}，{{orderInfo.mobile}}</view>
         <view class="copy-btn">
           <text>｜</text>
-          <text style="color: #3979BE" bindtap="copyAddress">复制</text>
+          <text style="color: #169dfe" bindtap="copyAddress">复制</text>
         </view>
       </view>
       <view class="list row between">
@@ -23,7 +23,7 @@
         <view>
           <text>{{orderInfo.orderSn}}</text>
           <text>｜</text>
-          <text style="color: #3979BE" bindtap="copyOrderSn">复制</text>
+          <text style="color: #169dfe" bindtap="copyOrderSn">复制</text>
         </view>
       </view>
       <view class="list row between">
