--- a/pages/subpages/mine/merchant-center/subpages/hotel-management/index.wxss
+++ b/pages/subpages/mine/merchant-center/subpages/hotel-management/index.wxss
@@ -182,7 +182,7 @@
 }
 .menu-item.selected {
   position: relative;
-  color: #3979BE;
+  color: #169dfe;
   font-size: 15px;
   font-weight: bold;
 }
@@ -195,7 +195,7 @@
   height: 3px;
   content: '';
   border-radius: 1.5px;
-  background: #3979BE;
+  background: #169dfe;
 }
 
 
