--- a/pages/subpages/mine/order-center/subpages/scenic-order-list/index.wxss
+++ b/pages/subpages/mine/order-center/subpages/scenic-order-list/index.wxss
@@ -15,7 +15,7 @@
 }
 .menu-item.selected {
   position: relative;
-  color: #3979BE;
+  color: #169dfe;
   font-size: 15px;
   font-weight: bold;
 }
@@ -28,7 +28,7 @@
   height: 3px;
   content: '';
   border-radius: 1.5px;
-  background: #3979BE;
+  background: #169dfe;
 }
 
 .content {
