--- a/pages/subpages/mine/order-center/subpages/set-meal-order-list/components/order-list/index.wxss
+++ b/pages/subpages/mine/order-center/subpages/set-meal-order-list/components/order-list/index.wxss
@@ -14,7 +14,7 @@
   font-weight: 500;
 }
 .order-status {
-  color: #3979BE;
+  color: #169dfe;
 }
 
 .list-content {
@@ -40,13 +40,13 @@
   line-height: 54rpx;
   text-align: center;
   font-size: 26rpx;
-  color: #3979BE;
+  color: #169dfe;
   border-radius: 28rpx;
-  border: 1rpx solid #3979BE;
+  border: 1rpx solid #169dfe;
 }
 .btn.active {
   color: #fff;
-  background: #3979BE;
+  background: #169dfe;
 }
 .btn:last-child {
   margin-right: 0;
