--- a/pages/subpages/mine/order-center/subpages/order-search/index.wxml
+++ b/pages/subpages/mine/order-center/subpages/order-search/index.wxml
@@ -40,16 +40,11 @@
 </view>
 
 <view class="list-wrap" wx:if="{{isSearching}}">
-  <view class="order-list">
-    <order-item 
-      wx:for="{{orderList}}" 
-      wx:key="index" 
-      item="{{item}}" 
-      index="{{index}}" 
-      bind:update="updateOrderList"
-      bind:checkQrCode="showQrCodeModal"
-    />
-  </view>
+  <scenic-order-list wx:if="{{type === 1}}" list="{{orderList}}" bind:update="updateScenicOrderList"/>
+  <hotel-order-list wx:if="{{type === 2}}" list="{{orderList}}" bind:update="updateScenicOrderList"/>
+  <meal-ticket-order-list wx:if="{{type === 3}}" list="{{orderList}}" bind:update="updateScenicOrderList"/>
+  <set-meal-order-list wx:if="{{type === 4}}" list="{{orderList}}" bind:update="updateScenicOrderList"/>
+  <goods-order-list wx:if="{{type === 5}}" list="{{orderList}}" bind:update="updateScenicOrderList"/>
   <empty-illus wx:if="{{!orderList.length}}" desc="暂无订单列表" />
   <view class="no-more-tips" wx:if="{{orderList.length}}">～没有更多了～</view>
 </view>
