--- a/pages/subpages/mine/order-center/subpages/order-search/index.wxml
+++ b/pages/subpages/mine/order-center/subpages/order-search/index.wxml
@@ -45,6 +45,6 @@
   <meal-ticket-order-list wx:if="{{type === 3}}" list="{{orderList}}" bind:update="updateScenicOrderList"/>
   <set-meal-order-list wx:if="{{type === 4}}" list="{{orderList}}" bind:update="updateScenicOrderList"/>
   <goods-order-list wx:if="{{type === 5}}" list="{{orderList}}" bind:update="updateScenicOrderList"/>
-  <empty-illus wx:if="{{!orderList.length}}" desc="暂无订单列表" />
+  <empty-illus wx:if="{{!orderList.length}}" desc="暂无{{['景点', '酒店', '餐券', '套餐', '商品'][type - 1]}}订单" />
   <view class="no-more-tips" wx:if="{{orderList.length}}">～没有更多了～</view>
 </view>
