--- a/pages/subpages/mine/order-center/components/scenic-order-list/index.wxml
+++ b/pages/subpages/mine/order-center/components/scenic-order-list/index.wxml
@@ -1,4 +1,4 @@
-<wxs module="ORDER" src="../../../../../utils/scenicOrder.wxs" />
+<wxs module="ORDER" src="../../../utils/scenicOrder.wxs" />
 <view class="order-list">
   <view class="order-item" wx:for="{{list}}" wx:key="index" catchtap="navToDetail" data-id="{{item.id}}">
     <view class="list-header row between">
