--- a/pages/subpages/mine/order-center/subpages/goods-order/order-detail/index.wxml
+++ b/pages/subpages/mine/order-center/subpages/goods-order/order-detail/index.wxml
@@ -1,5 +1,5 @@
 <wxs module="TIME" src="/utils/filters/time.wxs" />
-<wxs module="ORDER" src="../../../../../utils/order.wxs" />
+<wxs module="ORDER" src="../../../../utils/order.wxs" />
 <view class="container">
   <view class="card">
     <view class="card-header row">
