--- a/pages/subpages/mine/order-center/subpages/scenic-order/order-detail/index.wxml
+++ b/pages/subpages/mine/order-center/subpages/scenic-order/order-detail/index.wxml
@@ -1,5 +1,5 @@
 <wxs module="TIME" src="/utils/filters/time.wxs" />
-<wxs module="ORDER" src="../../../../../utils/scenicOrder.wxs" />
+<wxs module="ORDER" src="../../../../utils/scenicOrder.wxs" />
 
 <view class="container">
   <view class="card">
