--- a/pages/subpages/mall/goods/subpages/goods-detail/index.wxml
+++ b/pages/subpages/mall/goods/subpages/goods-detail/index.wxml
@@ -5,10 +5,10 @@
 
 <!-- 顶部导航 -->
 <view class="nav-bar {{showNavBar ? 'show' : ''}}" style="padding-top: {{statusBarHeight}}px">
-  <back-icon />
-  <view class="menu-wrap {{showNavBar ? 'show' : ''}}">
-    <view class="menu-tips {{!detailActive ? 'show' : ''}}" bindtap="scrollToTop">宝贝</view>
-    <view class="menu-split">|</view>
+  <back-icon style="margin-left: 8px;" />
+  <view class="menu-wrap" wx:if="{{showNavBar}}"> 
+    <view class="menu-tips {{!evaluationActive && !detailActive ? 'show' : ''}}" bindtap="scrollToTop">商品</view>
+    <view class="menu-tips {{evaluationActive ? 'show' : ''}}" wx:if="{{evaluationSummary.total}}" bindtap="scrollToEvaluation">评价</view>
     <view class="menu-tips {{detailActive ? 'show' : ''}}" bindtap="scrollToDetail">详情</view>
   </view>
 </view>
@@ -62,12 +62,12 @@
     </view>
   </view>
 
-  <view class="comment-summary-wrap row between" bindtap="checkEvaluationDetail">
-    <view class="comment-summary row">
-      <view class="comment-user-avatar-wrap row" wx:if="{{evaluationSummary.userList.length}}">
-        <image class="comment-user-avatar" wx:for="{{evaluationSummary.userList}}" wx:key="index" src="{{ item.avatar }}" />
+  <view class="evaluation-summary-wrap row between" bindtap="checkEvaluationDetail">
+    <view class="evaluation-summary row">
+      <view class="evaluation-user-avatar-wrap row" wx:if="{{evaluationSummary.userList.length}}">
+        <image class="evaluation-user-avatar" wx:for="{{evaluationSummary.userList}}" wx:key="index" src="{{ item.avatar }}" />
       </view>
-      <view class="comment-num">{{evaluationSummary.total ? evaluationSummary.total + '评价' : '暂无评价'}}</view>
+      <view class="evaluation-num">{{evaluationSummary.total ? evaluationSummary.total + '评价' : '暂无评价'}}</view>
     </view>
     <view class="goods-score-wrap row">
       <view wx:if="{{evaluationSummary.avgScore}}">商品评分</view>
