--- a/pages/subpages/mall/goods/subpages/goods-detail/index.wxss
+++ b/pages/subpages/mall/goods/subpages/goods-detail/index.wxss
@@ -47,27 +47,67 @@
 .banner-video {
   position: relative;
 }
-.play-btn {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  width: 130rpx;
-  height: 130rpx;
-  transform: translate(-50%, -50%);
+
+.video-wrap {
+  position: relative;
+  width: 100%;
+  height: 100%;
 }
+.video-player {
+  width: 100%;
+  height: 100%;
+}
+
+.customer-banner {
+  position: absolute;
+  left: 0;
+  bottom: 26rpx;
+  width: 100%;
+  height: 50rpx;
+}
+.customer-info-wrap {
+  padding: 0 24rpx;
+  height: 50rpx;
+}
+.customer-info {
+  display: flex;
+  align-items: center;
+  padding: 0 18rpx;
+  max-width: 100%;
+  width: fit-content;
+  height: 50rpx;
+  background: rgba(0, 0, 0, 0.3);
+  border-radius: 25rpx;
+}
+.customer-avatar {
+  width: 36rpx;
+  height: 36rpx;
+  border-radius: 50%;
+}
+.customer-name {
+  margin-left: 12rpx;
+  flex: 1;
+  color: #fff;
+  font-size: 23rpx;
+}
+.customer-content {
+  margin-left: 12rpx;
+  color: #fff;
+  font-size: 23rpx;
+}
+
 .banner-dots {
   position: absolute;
   right: 24rpx;
   bottom: 26rpx;
-  width: 78rpx;
-  height: 46rpx;
-  line-height: 46rpx;
-  text-align: center;
+  padding: 0 24rpx;
+  height: 50rpx;
   color: #fff;
-  font-size: 20rpx;
-  font-weight: 500;
+  font-size: 23rpx;
+  line-height: 50rpx;
+  font-weight: bold;
   background: rgba(0, 0, 0, 0.3);
-  border-radius: 24rpx 24rpx 4rpx 24rpx;
+  border-radius: 25rpx;
 }
 .cur-dot {
   font-size: 24rpx;
