--- a/components/price-unit/index.wxss
+++ b/components/price-unit/index.wxss
@@ -1,3 +1,8 @@
 .price-unit {
-  font-weight: normal;
+  font-weight: 500;
+  line-height: 1;
+}
+.price-supply {
+  margin-left: 6rpx;
+  padding-bottom: 8rpx;
 }
