--- a/pages/subpages/mall/goods/subpages/goods-detail/index.wxss
+++ b/pages/subpages/mall/goods/subpages/goods-detail/index.wxss
@@ -159,10 +159,9 @@ page {
 }
 
 .goods-name {
-  margin-top: 8rpx;
-  color: #333;
-  font-size: 30rpx;
-  line-height: 40rpx;
+  margin-top: 24rpx;
+  color: #141925;
+  font-size: 32rpx;
   font-weight: 600;
 }
 .goods-tag {
@@ -179,6 +178,11 @@ page {
   font-weight: 500;
   border-radius: 8rpx;
   background: #fce4e6;
+}
+.goods-intro {
+  margin-top: 18rpx;
+  color: #feabba;
+  font-size: 24rpx;
 }
 
 .list-spec {
